--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,9 @@
 <html>
 	<head>
+		
 		<title>Bienvenido a hyperblog 2.0</title>
 		<link rel="stylesheet" href="css/estilos.css" />
+		<meta charset="utf-8"/>
 	</head>
 	<body>
 		<div id="container">
