--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
 				<p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
 				<p>Los blogs son la mejor forma de compartir información y tus ideas mucho mas que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
 				<p>Suscribete y dale like...</p>
+				<h2>Prueba de git stash</h2>
 			</div>	
 			<div id="footer">
 				Hecho en platzi con amor <3
