Se añadio corazones adicionales al footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,7 +21,7 @@
 				</p>
 			</div>	
 			<div id="footer">
-				Hecho en platzi con amor 💖
+				Hecho en platzi con amor 💖💖💖
 			</div>	
 		</div>
 	</body>
