--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
 				<p><img src="https://i.ibb.co/dQ8cLbQ/puente.jpg" alt="puente" width="100%" /></p>
 				<p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas mucho mas que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
 				<p>Suscribete y dale like...</p>
+				<h2>lorem prueba</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto maxime consectetur minima iusto unde accusantium, aliquid est quia autem molestiae maiores corrupti aperiam. Facilis, earum culpa! Explicabo accusantium quo quis.
 				</p>
 			</div>	
